--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,283 @@
-*{
-
-    margin: 0;
-    padding: 0;
-    
-    }
-
-    ul{
-        list-style-type: none;
-        text-align: right;
-    }
-    
-    .offcanvas-body{display: inline-block;
-            
-            border-radius:5px;
-            padding: 10px;
-            gap: 15px;
-            
-
+* {
+  margin: 0;
+  padding: 0;
+}
+.ul {
+  list-style-type: none;
+  text-align: right;
 }
 
+.offcanvas-body {
+  display: inline-block;
 
-
-    
-    
-
-
-.menu{display: flex;
-    justify-content:flex-end;
-    
-
-    gap: 15px;
-        }
-
-
-
-
-a{font-size: 20px;
-font-weight: bolder;
-font-style: italic;
-color:white;
-border: 2px solid white;
-border-radius:5px;
-padding: 10px;
+  border-radius: 5px;
+  padding: 10px;
+  gap: 15px;
 }
 
-a:hover{
-    font-weight: bold;
-    padding: 20px;
-    background-color: rgb 10,10,60;
-    color: rgb(128, 128, 128);
+.menu {
+  display: flex;
+  justify-content: flex-end;
+
+  gap: 15px;
 }
 
-a:active{background-color: yellow;
-color: black;}
-
-.Logo{text-align: left;}
-
-.bg-personalizado{
-    padding: 20px;
-    background-color: rgb(60, 108, 173);
+.nav-item > a {
+  font-size: 20px;
+  font-weight: bolder;
+  font-style: italic;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 10px;
 }
 
-.navbar-nav{
-    display: flex;
-    justify-content:flex-end;
-    gap: 15px;}
+.nav-item > a:hover {
+  font-weight: bold;
+  padding: 20px;
+  background-color: rgb 10, 10, 60;
+  color: rgb(128, 128, 128);
+}
 
+a:active {
+  background-color: yellow;
+  color: black;
+}
 
+.Logo {
+  text-align: left;
+}
+
+.bg-personalizado {
+  padding: 20px;
+  background-color: #325e8e;
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: flex-end;
+  gap: 15px;
+}
+
+body {
+  background-color: rgb(224, 224, 224);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+/* cards */
+
+.grid {
+  margin: 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  align-items: center;
+}
+
+.grid > article {
+  background: #eee5e9;
+  border: none;
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 3);
+  border-radius: 20px;
+  text-align: center;
+  width: 220px;
+  transition: transform 0.3s;
+}
+
+.grid > article:hover {
+  transform: translateY(5px);
+  box-shadow: 2px 2px 26px 0px rgba(0, 0, 0, 10);
+}
+
+.grid > article img {
+  width: 100%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.text {
+  padding: 0 20px 20px;
+  font-size: 14px;
+}
+
+.text h3 {
+  text-transform: uppercase;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.primary-button {
+  background: #3c6cad;
+  border-radius: 20px;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.contact-us {
+  height: 600px;
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .grid > article {
+    text-align: center;
+  }
+  .contact-us {
+    height: 700px;
+  }
+  .imagen-quehacemos {
+    width: 100% !important;
+  }
+  .container-textos {
+    width: 100% !important;
+    text-align: justify;
+  }
+}
+
+/**contenedor que hacemos*/
+
+.container-que-hacemos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #325e8e;
+  align-content: center;
+}
+
+.imagen-quehacemos {
+  width: 38%;
+}
+
+.container-textos {
+  width: 48%;
+  color: white;
+  font-size: medium;
+}
+
+.card {
+  gap: 25px;
+}
+
+div.col {
+  border-radius: 30px;
+}
+
+.Clientes {
+  align-content: center;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card-img-top {
+  width: 100%;
+}
+
+/* footer */
+
+.container {
+  max-width: 1400px;
+  margin: auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer {
+  background-color: #24262b;
+  padding: 70px 0;
+}
+
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  color: #fff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolut;
+  left: 0;
+  bottom: -10px;
+  background-color: #3c6cad;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+  color: #fff;
+  padding-left: 8px;
+}
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #fff;
+}
+
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
+  }
+}
+
+.container-textos .ul {
+  text-align: left;
+}
